# This is a list of changes in pygame's history.
#
# SVN revision numbers, and CVS tag names are placed before the date
# BREAK = change breaks existing code
# BUG    = fixed a bug that was (or could have been) crashing

[SVN 2936] September 22, 2010
    Use capsule objects in preference to cobject objects.
    This allows Pygame to build an run from Python 3.2, which has to cobjects.

[SVN 2934] September 16, 2010
    [BUG] Fix some MSVC warnings in hope of solving an error raised in font_test.py.

[SVN 2923] September 16, 2010
    [BUG] Fix error in movie.c that prevents MSVC from compiling the module.

[SVN 2922] September 15, 2010
    [BUG] Mac builds fail: maybe using older versions of SDL_ttf or
      SDL_mixer. Restore version conditional code in font and music modules.

[SVN 2921] September 15, 2010
    Merge fsencoding branch back into trunk. This adds corrected Unicode file path
    handling to Pygame. File paths can contain any UTF-32 character, except \x00,
    provided the file system encoding can handle it. It is also one more step
    towards a full Python 3.1 port of Pygame.

[SVN 2914, 2916] September 15, 2010
    Preparation for merge with fsencoding branch

[SVN 2900-2910] August 31-September 11, 2010
    Preparations to freetype for release:
      - fix a bug with base.register_quit import that kept freetype
        from loading
      - improve Unicode handling so can handle all UTF-32 characters
      - enable encode_raw Font method
      - import exception messages
      - add missing error checks of memory allocations
      - attempt to fix text boundary calculation bug that causes
        memory access violations in some cases. Unfinished.

[SVN 2897] August 30, 2010
    update docs to reflect changes in r2855

[SVN 2858] August 18, 2010
    Remove distracting '"_POSIX_C_SOURCE" redefined' GCC warnings from linux builds.

[SVN 2857] August 17, 2010
    [BUG] fix rwobject memory leak when raising a memory error

[SVN 2856] August 15, 2010